.github/issue-evidence/10200-core-logger-build-order/baseline-core-build-without-logger.log
🚀 Starting dual build process for @elizaos/core
🔨 Building for Node.js...
🚀 Building @elizaos/core...

🌐 Building for Browser...
🚀 Building @elizaos/core...

⚡ Building for Edge...
🚀 Building @elizaos/core...

🧪 Building testing module...
🚀 Building @elizaos/core...

✓ Configuration prepared (1.04ms)

Bundling with Bun...
✓ Configuration prepared (0.83ms)

Bundling with Bun...
✓ Configuration prepared (0.70ms)

Bundling with Bun...
✓ Configuration prepared (0.49ms)

Bundling with Bun...
✓ Built 4 file(s) - 28.77MB (334.75ms)

✅ @elizaos/core build complete!
⏱️  Total build time: 335.90ms
✅ Node.js build complete in 0.34s
✓ Built 4 file(s) - 21.35MB (464.04ms)

✅ @elizaos/core build complete!
⏱️  Total build time: 464.96ms
✅ Browser build complete in 0.47s
✓ Built 2 file(s) - 18.57MB (601.05ms)

✅ @elizaos/core build complete!
⏱️  Total build time: 601.82ms
✅ Edge build complete in 0.60s
✓ Built 4 file(s) - 0.02MB (606.51ms)

✅ @elizaos/core build complete!
⏱️  Total build time: 607.10ms
✅ Testing module build complete in 0.61s
📝 Generating TypeScript declarations...
   Compiling TypeScript declarations...
src/logger.ts(17,8): error TS2307: Cannot find module '@elizaos/logger' or its corresponding type declarations.
src/logger.ts(32,8): error TS2307: Cannot find module '@elizaos/logger' or its corresponding type declarations.
Build script error: 1050 | 	console.log("📝 Generating TypeScript declarations...");
1051 | 	const startTime = Date.now();
1052 | 
1053 | 	// Generate TypeScript declarations using tsc
1054 | 	console.log("   Compiling TypeScript declarations...");
1055 | 	await $`${resolveTscBin()} --project tsconfig.declarations.json`;
                      ^
ShellError: Failed with exit code 2
 exitCode: 2,
   stdout: "src/logger.ts(17,8): error TS2307: Cannot find module '@elizaos/logger' or its corresponding type declarations.\nsrc/logger.ts(32,8): error TS2307: Cannot find module '@elizaos/logger' or its corresponding type declarations.\n",
   stderr: "",

      at new ShellPromise (75:16)
      at BunShell2 (191:36)
      at generateTypeScriptDeclarations (/home/shaw/eliza/eliza-issue-9943-telegram-build/packages/core/build.ts:1055:8)
      at async buildAll (/home/shaw/eliza/eliza-issue-9943-telegram-build/packages/core/build.ts:893:8)
      at async withCoreBuildLock (/home/shaw/eliza/eliza-issue-9943-telegram-build/packages/core/build.ts:139:16)

baseline status=1
